# lazy_fred

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  __init__.py  dashboard_app.py  data.json  data_store.py  lazy_fred.py  lazy_fred_history.db  mergefred.py  panel.py  pyproject.toml  test_data_store.py  test_lazy_fred.py  test_panel.py  test_wizard.py  wizard.py
.cursor/rules/: poetry-pytest.mdc  poetry-ruff-check.mdc
.github/workflows/: publish-pypi.yml  python-app.yml
.lazy_fred_configs/: My_FRED_data.json
lazy_fred_poetry/: pyproject.toml
