[tool.poetry]
name = "lazy_fred"
version = "0.1.6"
description = "'A simplified aggegate of FRED data using fredapi package'"
authors = ["Jmetrics86 <jsnbrwstr@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
fredapi = "^0.5.2"
python-dotenv = "^1.0.1"
fred = "^3.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.6"
pytest = "^8.2.1"
hypothesis = "^6.103.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
