[tool.poetry]
name = "lazy_fred"
version = "0.1.70"
description = "'A simplified aggegate of FRED data using fredapi package'"
authors = ["Jmetrics86 <jsnbrwstr@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "lazy_fred.py" },
    { include = "wizard.py" },
    { include = "data_store.py" },
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
fredapi = "^0.5.2"
python-dotenv = "^1.0.1"
fred = "^3.1"
rich = "^14.3.3"
inquirerpy = "^0.3.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.6"
pytest = "^8.2.1"
hypothesis = "^6.103.0"

[tool.poetry.scripts]
lazy-fred = "lazy_fred:main"
lazy_fred = "lazy_fred:main"
lazy-fred-wizard = "wizard:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
