[tool.poetry]
name = "lazy_fred"
version = "0.1.71"
description = "'A simplified aggegate of FRED data using fredapi package'"
authors = ["Jmetrics86 <jsnbrwstr@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "lazy_fred.py" },
    { include = "wizard.py" },
    { include = "data_store.py" },
    { include = "panel.py" },
    { include = "dashboard_app.py" },
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
fredapi = "^0.5.2"
python-dotenv = "^1.0.1"
fred = "^3.1"
rich = "^14.3.3"
inquirerpy = "^0.3.4"
streamlit = { version = "^1.40.0", optional = true }
plotly = { version = "^5.24.0", optional = true }

[tool.poetry.extras]
dashboard = ["streamlit", "plotly"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.6"
pytest = "^8.2.1"
hypothesis = "^6.103.0"

[tool.poetry.scripts]
lazy-fred = "lazy_fred:main"
lazy_fred = "lazy_fred:main"
lazy-fred-wizard = "wizard:main"
lazy-fred-dashboard = "dashboard_app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
